--- a/tools/geos-config.in
+++ b/tools/geos-config.in
@@ -1,14 +1,9 @@
 #!/bin/sh
 
-# escape paths
-escape() {
-  echo "$1" | sed 's/ /\\ /g'
-}
-
-prefix=`escape "@prefix@"`
-# exec_prefix is interpolated in @libdir@
-exec_prefix=`escape "@exec_prefix@"`
-libdir=`escape "@libdir@"`
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+includedir=@includedir@
+libdir=@libdir@
 
 usage()
 {
@@ -64,13 +59,13 @@ while test $# -gt 0; do
       echo -L${libdir} -lgeos -lm
       ;;
     --cflags)
-      echo -I${prefix}/include
+      echo -I${includedir}
       ;;
     --ldflags)
       echo -L${libdir}
       ;;
     --includes)
-      echo ${prefix}/include
+      echo ${includedir}
       ;;
     --jtsport)
       echo @JTS_PORT@
