--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -1586,7 +1586,7 @@ typedef struct GEOSWKBReader_t GEOSWKBReader;
 typedef struct GEOSWKBWriter_t GEOSWKBWriter;
 
 /**
-* Reader object to read GeoJSON format and construct a GeometryCollection.
+* Reader object to read GeoJSON format and construct a Geometry.
 * \see GEOSGeoJSONReader_create
 * \see GEOSGeoJSONReader_create_r
 */
@@ -4280,8 +4280,9 @@ extern GEOSGeoJSONReader GEOS_DLL *GEOSGeoJSONReader_create(void);
 extern void GEOS_DLL GEOSGeoJSONReader_destroy(GEOSGeoJSONReader* reader);
 
 /**
-* Use a reader to parse a GeoJSON containing a featurecollection,
-* and return geometrycollection. Feature properties are not read.
+* Use a reader to parse a GeoJSON. A single geometry or feature is,
+* converted into a geometry. A featurecollection is converted into a
+* geometrycollection. Feature properties are not read.
 * \param reader A GeoJSON reader object, caller retains ownership
 * \param geojson The json string to parse, caller retains ownership
 * \return A \ref GEOSGeometry, caller to free with GEOSGeometry_destroy())
