--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -570,6 +570,26 @@ enum GEOSBufJoinStyles {
 	GEOSBUF_JOIN_BEVEL = 3
 };
 
+/**
+* Output options for the GeoJSON writer.
+* \see GEOSGeoJSONWriter_create
+*/
+enum GEOSGeoJSONType {
+    /**
+    * Output only contains a geometry.
+    */
+	GEOSGEOJSON_GEOMETRY,
+    /**
+    * Output is a feature that contains the geometry.
+    */
+	GEOSGEOJSON_FEATURE,
+    /**
+    * Output contains multiple features in a FeatureCollection.
+    * Input must be a collection.
+    */
+	GEOSGEOJSON_FEATURE_COLLECTION
+};
+
 /** \see GEOSBufferParams_create */
 extern GEOSBufferParams GEOS_DLL *GEOSBufferParams_create_r(
     GEOSContextHandle_t handle);
@@ -1592,6 +1612,13 @@ typedef struct GEOSWKBWriter_t GEOSWKBWriter;
 */
 typedef struct GEOSGeoJSONReader_t GEOSGeoJSONReader;
 
+/**
+* Writer object to turn a Geometry into GeoJSON.
+* \see GEOSGeoJSONReader_create
+* \see GEOSGeoJSONReader_create_r
+*/
+typedef struct GEOSGeoJSONWriter_t GEOSGeoJSONWriter;
+
 #endif
 
 /* ========== WKT Reader ========== */
@@ -1748,10 +1775,28 @@ extern void GEOS_DLL GEOSGeoJSONReader_destroy_r(GEOSContextHandle_t handle,
     GEOSGeoJSONReader* reader);
 
 /** \see GEOSWKTReader_read */
-extern GEOSGeometry GEOS_DLL *GEOSGeoJSONReader_read_r(
+extern GEOSGeometry GEOS_DLL *GEOSGeoJSONReader_readGeometry_r(
     GEOSContextHandle_t handle,
     GEOSGeoJSONReader* reader,
     const char *geojson);
+
+/* ========== GeoJSON Writer ========== */
+
+/** \see GEOSGeoJSONWriter_create */
+extern GEOSGeoJSONWriter GEOS_DLL *GEOSGeoJSONWriter_create_r(
+    GEOSContextHandle_t handle);
+
+/** \see GEOSGeoJSONWriter_destroy */
+extern void GEOS_DLL GEOSGeoJSONWriter_destroy_r(GEOSContextHandle_t handle,
+    GEOSGeoJSONWriter* reader);
+
+/** \see GEOSWKTWriter_write */
+extern char GEOS_DLL *GEOSGeoJSONWriter_writeGeometry_r(
+    GEOSContextHandle_t handle,
+    GEOSGeoJSONWriter* writer,
+    const GEOSGeometry* g,
+    int type,
+    int indent);
 
 /** \see GEOSFree */
 extern void GEOS_DLL GEOSFree_r(
@@ -4287,9 +4332,37 @@ extern void GEOS_DLL GEOSGeoJSONReader_destroy(GEOSGeoJSONReader* reader);
 * \param geojson The json string to parse, caller retains ownership
 * \return A \ref GEOSGeometry, caller to free with GEOSGeometry_destroy())
 */
-extern GEOSGeometry GEOS_DLL *GEOSGeoJSONReader_read(
+extern GEOSGeometry GEOS_DLL *GEOSGeoJSONReader_readGeometry(
     GEOSGeoJSONReader* reader,
     const char *geojson);
+
+/* ========= GeoJSON Writer ========= */
+
+/**
+* Allocate a new \ref GEOSGeoJSONWriter.
+* \returns a new writer. Caller must free with GEOSGeoJSONWriter_destroy()
+*/
+extern GEOSGeoJSONWriter GEOS_DLL *GEOSGeoJSONWriter_create(void);
+
+/**
+* Free the memory associated with a \ref GEOSGeoJSONWriter.
+* \param writer The writer to destroy.
+*/
+extern void GEOS_DLL GEOSGeoJSONWriter_destroy(GEOSGeoJSONWriter* writer);
+
+/**
+* Write out the GeoJSON representation of a geometry.
+* \param writer A GeoJSON reader object, caller retains ownership.
+* \param geojson The json string to parse, caller retains ownership.
+* \param type The GeoJSON object type. See \ref GEOSGeoJSONType.
+* \param indent The indentation used. Use -1 for no formatting.
+* \return A \ref GEOSGeometry, caller to free with GEOSGeometry_destroy())
+*/
+extern char GEOS_DLL *GEOSGeoJSONWriter_writeGeometry(
+    GEOSGeoJSONWriter* writer,
+    const GEOSGeometry* g,
+    int type,
+    int indent);
 
 #endif /* #ifndef GEOS_USE_ONLY_R_API */
 
