--- a/tests/xmltester/CMakeLists.txt
+++ b/tests/xmltester/CMakeLists.txt
@@ -34,12 +34,25 @@ target_include_directories(test_xmltester
 
 # Scan the directories of XML tests and create a test for each.
 foreach(_testdir general issue misc robust validate)
-    file(GLOB_RECURSE _testfiles ${CMAKE_CURRENT_LIST_DIR}/tests/${_testdir}/*.xml CONFIGURE_DEPEND)
+    file(GLOB_RECURSE _testfiles
+        ${CMAKE_CURRENT_LIST_DIR}/tests/${_testdir}/*.xml
+        CONFIGURE_DEPEND)
     foreach(_testfile ${_testfiles})
         get_filename_component(_testname ${_testfile} NAME_WE)
-        add_test(NAME ${_testdir}-${_testname} COMMAND test_xmltester -v --test-valid-output ${_testfile})
+        add_test(NAME ${_testdir}-${_testname}
+            COMMAND test_xmltester -v --test-valid-output ${_testfile})
+        list(APPEND _xmltests ${_testfile})
     endforeach()
 endforeach()
+
+# Run all the XML tests in one go, for faster memory checking
+# under valgrind. Restrict to one configuration so it is only
+# run with 'ctest -C Valgrind'
+add_test(NAME all-xml-tests
+    COMMAND test_xmltester -v --test-valid-output ${_xmltests}
+    CONFIGURATIONS Valgrind
+    )
+unset(_xmltests)
 
 # Disable tests that are known to fail on 32-bit systems.
 set_tests_properties(issue-issue-geos-837 PROPERTIES DISABLED $<EQUAL:4,${CMAKE_SIZEOF_VOID_P}>)
