--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -59,31 +59,31 @@ stages:
           CXXSTD: 11, 14, 17, 20
           CXX: clang++-8
           PACKAGES: clang-8
-          LLVM_REPO: llvm-toolchain-8
+          LLVM_REPO: llvm-toolchain-bionic-8
         Clang 7:
           CXXSTD: 14, 17, 20
           CXX: clang++-7
           PACKAGES: clang-7
-          LLVM_REPO: llvm-toolchain-7
+          LLVM_REPO: llvm-toolchain-bionic-7
         Clang 6:
           CXXSTD: 14, 17, 20
           CXX: clang++-6.0
           PACKAGES: clang-6.0
-          LLVM_REPO: llvm-toolchain-6.0
+          LLVM_REPO: llvm-toolchain-bionic-6.0
         Clang 5:
           CXXSTD: 11, 14, 17
           PACKAGES: clang-5.0
           CXX: clang++-5.0
-          LLVM_REPO: llvm-toolchain-5.0
+          LLVM_REPO: llvm-toolchain-bionic-5.0
         Clang 4:
           CXXSTD: 11, 14
           CXX: clang++-4.0
           PACKAGES: clang-4.0
-          LLVM_REPO: llvm-toolchain-4.0
+          LLVM_REPO: llvm-toolchain-bionic-4.0
         Clang 3.9:
           CXXSTD: 11, 14
           CXX: clang++-3.9
-          PACKAGES: llvm-toolchain-3.9
+          PACKAGES: llvm-toolchain-bionic-3.9
         Clang 3.8:
           CXX: clang++-3.8
           CXXSTD: 11, 14
@@ -104,7 +104,7 @@ stages:
     - script: |
         set -e
         uname -a
-        sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/ppa"
+        sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
         if test -n "${LLVM_REPO}" ; then
           wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
           sudo -E apt-add-repository "deb http://apt.llvm.org/bionic/ ${LLVM_REPO} main"
