Ug, set the OMP iterator to signed for MSVC then cast it back to size_t everywhere for clang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -266,18 +266,19 @@ add_subdirectory(src)
 #-----------------------------------------------------------------------------
 
 option(GEOS_ENABLE_OPENMP "Enable OpenMP" ON)
-if (GEOS_ENABLE_OPENMP)
+if(GEOS_ENABLE_OPENMP)
   find_package(OpenMP)
   if(OpenMP_CXX_FOUND)
     message(STATUS "GEOS: OpenMP_C_INCLUDE_DIRS ${OpenMP_C_INCLUDE_DIRS}")
     message(STATUS "GEOS: OpenMP_CXX_INCLUDE_DIRS ${OpenMP_CXX_INCLUDE_DIRS}")
     message(STATUS "GEOS: OpenMP_CXX_LIBRARY ${OpenMP_CXX_LIBRARY}")
+    message(STATUS "GEOS: OpenMP_CXX_LIBRARIES ${OpenMP_CXX_LIBRARIES}")
     message(STATUS "GEOS: OpenMP_CXX_LIB_NAMES ${OpenMP_CXX_LIB_NAMES}")
     message(STATUS "GEOS: OpenMP_CXX_FLAGS ${OpenMP_CXX_FLAGS}")
     target_compile_options(geos_cxx_flags INTERFACE "${OpenMP_CXX_FLAGS}")
-    target_include_directories(geos INTERFACE ${OpenMP_CXX_INCLUDE_DIRS})
-    # target_link_options(geos PUBLIC "LINKER:-L${OpenMP_CXX_LIBRARY},-l${OpenMP_CXX_LIB_NAMES}")
     target_compile_definitions(geos_cxx_flags INTERFACE GEOS_OPENMP)
+    target_include_directories(geos INTERFACE ${OpenMP_CXX_INCLUDE_DIRS})
+    target_link_libraries(geos PRIVATE ${OpenMP_CXX_LIBRARIES})
   endif()
 endif()
 
